# slurm-factory-spack-repo

./: .commitlintrc.yml  .gitignore  DEPENDENCY_TYPES_UPDATE.md  README.md  justfile  pyproject.toml  spack-repo-index.yaml
.github/workflows/: ci.yml  publish-docs.yml
docusaurus/: .markdownlint.json  docusaurus.config.ts  package.json  sidebars.ts
docusaurus/data/: version.yml
docusaurus/docs/: contact.md  contributing.md  getting-started.md  index.md
docusaurus/scripts/: build-with-version.sh
examples/: Dockerfile.install-from-buildcache-with-repo
extras/: curl_upstream_package_source.py  slurm_upstream_package.py
scripts/: add_license_headers.py  update_docs_version.py
spack_repo/slurm_factory/: repo.yaml
