# Copyright 2025 Vantage Compute Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "slurm-factory-spack-repo"
version = "0.0.3"
description = "Spack repository containing custom slurm and slurm dependency package definitions."
readme = "README.md"
authors = [
    {name = "James Beedy", email = "james@vantagecompute.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "black>=25.9.0",
    "codespell>=2.4.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

# ===== Project Metadata =====
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spack_repo"]

# ===== Development Tools =====
[tool.black]
line-length = 110
src = ["spack_repo"]

[tool.ruff]
line-length = 110
extend-exclude = ["__pycache__", "*.egg_info", "__init__.py", "data"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
# D203: 1 blank line before class docstring (conflicts with D211)
# D212: Multi-line docstring summary on second line (conflicts with D213)
# C901: Function too complex
# F403: Star imports used (required for Spack package DSL)
# F405: Names may be undefined from star imports (required for Spack package DSL)
# D100: Missing module docstring (not needed for Spack packages)
# D101: Missing class docstring (Spack packages are self-documenting)
# D102: Missing method docstring (methods in Spack packages follow conventions)
ignore = ["D203", "D212", "C901", "F403", "F405", "D100", "D101", "D102"]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true

[tool.pyright]
include = ["spack_repo"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "**/.git",
]
ignore = ["spack_repo/slurm_factory/packages/**"]
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
reportAttributeAccessIssue = "warning"
pythonVersion = "3.12"
pythonPlatform = "Linux"

# ===== Testing Configuration =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ===== Changelog Generation =====
# git-cliff configuration
[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to the JupyterLab Firefox Launcher project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

"""
body = """
{% if version %}\
    {% if previous.version %}\
        ## [{{ version }}] - {{ timestamp | date(format="%Y-%m-%d") }}
    {% else %}\
        ## [{{ version }}] - {{ timestamp | date(format="%Y-%m-%d") }}
    {% endif %}\
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}**{{ commit.scope }}**: {% endif %}{{ commit.message | upper_first }}\
          {% if commit.breaking %} [**BREAKING**]{% endif %}
    {% endfor %}
{% endfor %}\

"""
trim = true
footer = """
<!-- generated by git-cliff -->
"""

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactor" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore\\(deps.*\\)", skip = true },
    { message = "^chore\\(pr\\)", skip = true },
    { message = "^chore\\(pull\\)", skip = true },
    { message = "^chore|^ci", group = "Miscellaneous Tasks" },
    { body = ".*security", group = "Security" },
    { message = "^revert", group = "Revert" },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "[0-9].*"
skip_tags = ""
ignore_tags = ""
topo_order = false
sort_commits = "oldest"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
